<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="744dp"
    android:background="@drawable/rounded_up"
    android:backgroundTint="@color/grey_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ActionMenuView
        android:id="@+id/actionMenuView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/grey_3"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_search"
            android:dividerPadding="10dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <SearchView
                android:id="@+id/search_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                android:queryHint="Ростов-на-Дону"
                android:searchIcon="@drawable/plane_search_icon"
                android:textSize="20pt" />

            <SearchView
                android:id="@+id/search_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                android:queryHint="Москва"
                android:searchIcon="@drawable/search_icon_light"
                android:textSize="20pt" />
        </LinearLayout>
    </ActionMenuView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/complex_path_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionMenuView"
        app:layout_constraintEnd_toStartOf="@+id/wherever_btn"
        android:backgroundTint="@color/dark_green"
        android:layout_marginTop="24dp"
        android:foreground="@drawable/complex_path_inset"
        android:background="@drawable/rounded_corners_button"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/wherever_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/complex_path_btn"
        app:layout_constraintTop_toBottomOf="@+id/actionMenuView"
        app:layout_constraintEnd_toStartOf="@+id/weekend_btn"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="24dp"
        android:foreground="@drawable/wherever_inset"
        android:background="@drawable/rounded_corners_button"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/weekend_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/wherever_btn"
        app:layout_constraintTop_toBottomOf="@+id/actionMenuView"
        app:layout_constraintEnd_toStartOf="@+id/hot_btn"
        android:backgroundTint="@color/dark_blue"
        android:layout_marginTop="24dp"
        android:foreground="@drawable/weekend_inset"
        android:background="@drawable/rounded_corners_button"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hot_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/weekend_btn"
        app:layout_constraintTop_toBottomOf="@+id/actionMenuView"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/red"
        android:layout_marginTop="24dp"
        android:foreground="@drawable/hot_inset"
        android:background="@drawable/rounded_corners_button"
        />

    <TextView
        android:id="@+id/complex_path_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complex_path_txt"
        app:layout_constraintEnd_toEndOf="@+id/complex_path_btn"
        app:layout_constraintStart_toStartOf="@+id/complex_path_btn"
        app:layout_constraintTop_toBottomOf="@+id/complex_path_btn"
        android:gravity="center"
        style="@style/text_2"
        android:textColor="@color/white"
        android:maxWidth="70dp"/>

    <TextView
        android:id="@+id/wherever_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wherever_txt"
        app:layout_constraintEnd_toEndOf="@+id/wherever_btn"
        app:layout_constraintStart_toStartOf="@+id/wherever_btn"
        app:layout_constraintTop_toBottomOf="@+id/wherever_btn"
        android:gravity="center"
        style="@style/text_2"
        android:textColor="@color/white"
        android:maxWidth="80dp"/>

    <TextView
        android:id="@+id/weekend_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekend_txt"
        app:layout_constraintEnd_toEndOf="@+id/weekend_btn"
        app:layout_constraintStart_toStartOf="@+id/weekend_btn"
        app:layout_constraintTop_toBottomOf="@+id/weekend_btn"
        android:gravity="center"
        style="@style/text_2"
        android:textColor="@color/white"
        android:maxWidth="80dp"/>

    <TextView
        android:id="@+id/hot_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_txt"
        app:layout_constraintEnd_toEndOf="@+id/hot_btn"
        app:layout_constraintStart_toStartOf="@+id/hot_btn"
        app:layout_constraintTop_toBottomOf="@+id/hot_btn"
        android:gravity="center"
        style="@style/text_2"
        android:textColor="@color/white"
        android:maxWidth="80dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>